vault/peer-authentication.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: mtls-disable
  namespace: vault
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: vault
  mtls:
    mode: DISABLE
