vault/virtualservice.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: virtualservice
  namespace: vault
spec:
  hosts:
    - secrets.local.io
  gateways:
    - gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: vault.vault.svc.cluster.local
            port:
              number: 8200
